--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./android.css" type="text/css">
   </head>
   <body>
+    <h2>My innappropriate project of the day</h2>
     <div class="android">
       <div class="head">
         <div class="l_ant"></div>
@@ -23,5 +24,6 @@
         </div>
       </div>
     </div>
+    <h5>By Michael Kempf</h5>
   </body>
 </html>
